[gd_scene load_steps=25 format=3 uid="uid://dcf86iwg6mn3d"]

[ext_resource type="Script" uid="uid://df3do7nvg4as7" path="res://scenes/menus/story_mode_menu.gd" id="1_el8f4"]
[ext_resource type="FontFile" uid="uid://dipxuxqymub2c" path="res://resources/fonts/vcr-jp.ttf" id="2_3esc8"]
[ext_resource type="Script" uid="uid://bfydji5l6juhk" path="res://scenes/menus/story_menu/props_container.gd" id="3_64j2x"]
[ext_resource type="Script" uid="uid://ceghwb3yjt8wp" path="res://scenes/menus/story_menu/songs_label.gd" id="3_552ey"]
[ext_resource type="Texture2D" uid="uid://vbft4ijb0s4b" path="res://resources/images/menus/story_menu/week_sprites/tutorial.png" id="4_3r44s"]
[ext_resource type="Texture2D" uid="uid://bsjowh7qqed78" path="res://resources/images/menus/story_menu/difficulty_sprites/normal.png" id="4_j0vh7"]
[ext_resource type="Script" uid="uid://bp07frgyvgscl" path="res://scenes/menus/story_menu/weeks.gd" id="4_owtj4"]
[ext_resource type="Texture2D" uid="uid://g4kew3bfwjeq" path="res://resources/images/menus/story_menu/week_sprites/week1.png" id="5_1dfdl"]
[ext_resource type="Script" uid="uid://xcwf8fppek0h" path="res://scripts/animated_sprite.gd" id="5_61vqd"]
[ext_resource type="SpriteFrames" path="res://resources/images/menus/story_menu/interface/arrows.res" id="6_kynlf"]
[ext_resource type="Script" uid="uid://btmma2a3qu1e6" path="res://scenes/menus/story_menu/week_node.gd" id="6_qh5s5"]
[ext_resource type="PackedScene" uid="uid://cl6aifhbol57q" path="res://scenes/menus/story_menu/props/bf.tscn" id="8_2yyv5"]
[ext_resource type="Script" uid="uid://cy73q76dmhvie" path="res://scripts/menus/story_week_props.gd" id="9_fjedh"]
[ext_resource type="PackedScene" uid="uid://bmjlw8331xjs2" path="res://scenes/menus/story_menu/props/dad.tscn" id="12_ydl1e"]
[ext_resource type="Script" uid="uid://df2o86ah3b60w" path="res://scripts/resources/difficulty_map.gd" id="13_8k8d1"]
[ext_resource type="PackedScene" uid="uid://dltbn2kviddy8" path="res://scenes/menus/story_menu/props/gf.tscn" id="13_h6fec"]
[ext_resource type="Script" uid="uid://y50dwtv7v34j" path="res://scenes/menus/story_menu/difficulties.gd" id="13_w5bhr"]

[sub_resource type="LabelSettings" id="LabelSettings_kq7xu"]
font = ExtResource("2_3esc8")
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_uaspw"]
font = ExtResource("2_3esc8")
font_size = 24
font_color = Color(0.929688, 0.403107, 0.625258, 1)

[sub_resource type="LabelSettings" id="LabelSettings_c4fjc"]
font = ExtResource("2_3esc8")
font_size = 24
font_color = Color(0.929688, 0.403107, 0.625258, 1)

[sub_resource type="Resource" id="Resource_imiqu"]
script = ExtResource("9_fjedh")
center = ExtResource("8_2yyv5")
right = ExtResource("13_h6fec")

[sub_resource type="Resource" id="Resource_ru6mx"]
script = ExtResource("9_fjedh")
left = ExtResource("12_ydl1e")
center = ExtResource("8_2yyv5")
right = ExtResource("13_h6fec")

[sub_resource type="Resource" id="Resource_81ca5"]
script = ExtResource("13_8k8d1")
mapping = {
"erect": &"_erect",
"nightmare": &"_erect"
}

[sub_resource type="SpriteFrames" id="SpriteFrames_krbt3"]
animations = [{
"frames": [],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[node name="story_mode_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_el8f4")
metadata/_edit_lock_ = true

[node name="background_color" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="week_color" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 56.0
offset_bottom = -264.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.976471, 0.811765, 0.317647, 1)

[node name="top_bar" type="Control" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 56.0
grow_horizontal = 2

[node name="high_score" type="Label" parent="top_bar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 16.0
offset_right = 631.0
grow_vertical = 2
text = "High Score: N/A"
label_settings = SubResource("LabelSettings_kq7xu")
vertical_alignment = 1

[node name="week_name" type="Label" parent="top_bar"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.75)
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -649.0
offset_right = -16.0
grow_horizontal = 0
grow_vertical = 2
label_settings = SubResource("LabelSettings_kq7xu")
horizontal_alignment = 2
vertical_alignment = 1

[node name="props" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(640, 256)
script = ExtResource("3_64j2x")

[node name="backdrop" type="Node2D" parent="props"]

[node name="left" type="Node2D" parent="props"]
position = Vector2(-360, 0)

[node name="center" type="Node2D" parent="props"]

[node name="right" type="Node2D" parent="props"]
position = Vector2(360, 0)

[node name="bottom" type="Control" parent="."]
clip_contents = true
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -264.0
grow_horizontal = 2
grow_vertical = 0

[node name="songs" type="Control" parent="bottom"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 376.0
grow_vertical = 2

[node name="top_label" type="Label" parent="bottom/songs"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 12.0
offset_top = 12.0
offset_right = -4.0
offset_bottom = 36.0
grow_horizontal = 2
text = "Songs"
label_settings = SubResource("LabelSettings_uaspw")
horizontal_alignment = 1

[node name="songs_label" type="Label" parent="bottom/songs"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = -222.0
offset_right = -4.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 0
label_settings = SubResource("LabelSettings_c4fjc")
horizontal_alignment = 1
vertical_alignment = 1
max_lines_visible = 8
script = ExtResource("3_552ey")

[node name="timer" type="Timer" parent="bottom/songs/songs_label"]
wait_time = 0.5
autostart = true

[node name="weeks" type="Control" parent="bottom"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -264.0
offset_top = 16.0
offset_right = 200.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_owtj4")

[node name="tutorial" type="TextureRect" parent="bottom/weeks"]
layout_mode = 2
offset_right = 456.0
offset_bottom = 82.0
grow_horizontal = 2
texture = ExtResource("4_3r44s")
stretch_mode = 5
script = ExtResource("6_qh5s5")
songs = PackedStringArray("tutorial")
difficulties = PackedStringArray("easy", "normal", "hard")
display_name = &"Teaching Time"
props = SubResource("Resource_imiqu")

[node name="week_1" type="TextureRect" parent="bottom/weeks"]
layout_mode = 2
offset_top = 90.0
offset_right = 456.0
offset_bottom = 179.0
grow_horizontal = 2
texture = ExtResource("5_1dfdl")
stretch_mode = 5
script = ExtResource("6_qh5s5")
songs = PackedStringArray("bopeebo", "fresh", "dad_battle")
difficulties = PackedStringArray("easy", "normal", "hard", "erect", "nightmare")
display_name = &"Daddy Dearest"
props = SubResource("Resource_ru6mx")
difficulty_suffixes = SubResource("Resource_81ca5")

[node name="difficulties" type="Control" parent="bottom"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -440.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("13_w5bhr")
metadata/_edit_lock_ = true

[node name="difficulty" type="Sprite2D" parent="bottom/difficulties"]
position = Vector2(220, 132)
texture = ExtResource("4_j0vh7")

[node name="animated" type="AnimatedSprite2D" parent="bottom/difficulties/difficulty"]
visible = false
sprite_frames = SubResource("SpriteFrames_krbt3")
animation = &"idle"
script = ExtResource("5_61vqd")

[node name="left_arrow" type="AnimatedSprite2D" parent="bottom/difficulties"]
position = Vector2(32, 132)
sprite_frames = ExtResource("6_kynlf")
animation = &"leftIdle"
script = ExtResource("5_61vqd")

[node name="right_arrow" type="AnimatedSprite2D" parent="bottom/difficulties"]
position = Vector2(408, 132)
sprite_frames = ExtResource("6_kynlf")
animation = &"rightIdle"
script = ExtResource("5_61vqd")

[connection signal="timeout" from="bottom/songs/songs_label/timer" to="bottom/songs/songs_label" method="_tick"]
